# Fryers

./: LICENSE  README.md  pyproject.toml
src/fryers/: __init__.py  fyers.py
